# q-gapselect

./: .gitignore  CITATION.cff  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
artifacts/: README.md  adaptive_unknown_boundary_topk.json  ccfa_matched_failure_attribution.json  charged_activity_history.json  coherent_adaptive_stopping_history.json  coherent_rank_baseline.json  coherent_statevector_history.json  coherent_unknown_boundary_topk.json  composition_frontier.json  direct_search_diagnostic.json  frontier_lower_bound_witness.json  hidden_frontier_fixture_manifest.json  lower_bound_program.json  proof_ledger.json  qgapattack_experiment_design.json  quantum_benchmark_diagnostic.json  reference_diagnostic.json  replay_coherent_frontier.json  research_gap_audit.json  s3_evidence_audit.json  scaling.json  stopping_time_transducer.json  stopping_unitary_theorem.json  strong_composition_registry.json  theorem_closure_audit.json  unknown_boundary_grid.json  variable_time_charged_history.json
configs/: adaptive_unknown_boundary_topk.json  attack_study.json  ccfa_adaptive_verification_ablation.json  ccfa_history_certificate_ablation.json  ccfa_matched_benchmarks.json  charged_activity_history.json  coherent.json  coherent_adaptive_stopping_history.json  coherent_rank_baseline.json  coherent_statevector_history.json  coherent_unknown_boundary_topk.json  composition_frontier.json  direct_search.json  frontier_lower_bound_witness.json  frozen_anchor_calibration.json  frozen_quantum_reference_benchmarks.json  frozen_selector_benchmarks.json  reference.json  (+14 more)
(+229 files in other folders)
